// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch should render 1`] = `
<DocumentFragment>
  <div
    class="flex items-center"
  >
    <span
      class="Switch__SwitchText-sc-1fue7gg-0 fLDmts"
      role="button"
    >
      Option A
    </span>
    <div
      class="mx-4"
    >
      <label
        class="flex"
      >
        <input
          class="Toggle__Input-qyyifx-0 WGuGL"
          type="checkbox"
        />
        <div
          class="Toggle__Handle-qyyifx-1 geejDn"
        >
          <span
            class="Toggle__HandleInner-qyyifx-2 eSIhju"
          />
        </div>
      </label>
    </div>
    <span
      class="Switch__SwitchText-sc-1fue7gg-0 lmUqQB"
      role="button"
    >
      Option B
    </span>
  </div>
</DocumentFragment>
`;

exports[`Switch should render disabled 1`] = `
<DocumentFragment>
  <div
    class="flex items-center"
  >
    <span
      class="Switch__SwitchText-sc-1fue7gg-0 dGYVxY"
      disabled=""
      role="button"
    >
      Option A
    </span>
    <div
      class="mx-4"
    >
      <label
        class="flex"
      >
        <input
          class="Toggle__Input-qyyifx-0 WGuGL"
          type="checkbox"
        />
        <div
          class="Toggle__Handle-qyyifx-1 jztkAY"
          disabled=""
        >
          <span
            class="Toggle__HandleInner-qyyifx-2 iIyzPS"
            disabled=""
          />
        </div>
      </label>
    </div>
    <span
      class="Switch__SwitchText-sc-1fue7gg-0 hLnEXV"
      disabled=""
      role="button"
    >
      Option B
    </span>
  </div>
</DocumentFragment>
`;

exports[`Switch should render large labels 1`] = `
<DocumentFragment>
  <div
    class="flex items-center"
  >
    <span
      class="Switch__SwitchText-sc-1fue7gg-0 bXQdub"
      role="button"
    >
      Option A
    </span>
    <div
      class="mx-4"
    >
      <label
        class="flex"
      >
        <input
          class="Toggle__Input-qyyifx-0 WGuGL"
          type="checkbox"
        />
        <div
          class="Toggle__Handle-qyyifx-1 geejDn"
        >
          <span
            class="Toggle__HandleInner-qyyifx-2 eSIhju"
          />
        </div>
      </label>
    </div>
    <span
      class="Switch__SwitchText-sc-1fue7gg-0 hyGGzy"
      role="button"
    >
      Option B
    </span>
  </div>
</DocumentFragment>
`;

exports[`Switch should render small labels 1`] = `
<DocumentFragment>
  <div
    class="flex items-center"
  >
    <span
      class="Switch__SwitchText-sc-1fue7gg-0 gVMMRn"
      role="button"
    >
      Option A
    </span>
    <div
      class="mx-4"
    >
      <label
        class="flex"
      >
        <input
          class="Toggle__Input-qyyifx-0 WGuGL"
          type="checkbox"
        />
        <div
          class="Toggle__Handle-qyyifx-1 geejDn"
        >
          <span
            class="Toggle__HandleInner-qyyifx-2 eSIhju"
          />
        </div>
      </label>
    </div>
    <span
      class="Switch__SwitchText-sc-1fue7gg-0 iUHdxO"
      role="button"
    >
      Option B
    </span>
  </div>
</DocumentFragment>
`;
